Add new url scheme

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<video src="/video/stream?v=V8VFPmEC1" ></video>
+	<video controls src="/video/stream?v=V8VFPmEC1.mp4" ></video>
 </body>
 </html>
