--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Video</title>
 </head>
 <body>
-	<video controls src="/video/stream?v=V8VFPmEC1.mp4" ></video>
+	<video controls src="/video?v=V8VFPmEC1.mp4" ></video>
 </body>
 </html>
